# fabric-api

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUTO_UPDATE.md  Dockerfile  LICENSE  OPENWEBUI_SETUP.md  PROJECT_SUMMARY.md  PROMPTING_STRATEGIES.md  QUICKSTART.md  README.md  WHY_NO_CONFIG.md  docker-compose.yml  pyproject.toml
fabric_mcp/: __init__.py  server.py
