[project]
name = "fabric-mcp-server"
version = "1.0.0"
description = "MCP server for Daniel Miessler's Fabric AI patterns - access 100+ curated prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
fabric-mcp = "fabric_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fabric_mcp"]
